--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Ashley Rodan",
   "license": "ISC",
   "dependencies": {
     "eslint": "^5.16.0",
     "readline-sync": "^1.4.9"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
